# lin2latex

./: README.md  dc4s_cfa.lin  hccc13cs.lin  lin2latex.py  pyproject.toml
lin2latex/: cli.py  main.py  template.tex
tests/: asymmetric.lin  asymmetric.tex  linear.lin  linear.tex  symmetric.lin  test_lin2latex.py
